# datamix

./: CHANGELOG.md  CITATION.cff  README.md  generate_svgs.py  pyproject.toml
examples/: create_mix.py  optimize_ratios.py  streaming_data.py
src/datamix/: __init__.py  _types.py  budget.py  calculator.py  cli.py  config.py  curriculum.py  diversity.py  mixer.py  optimizer.py  profile.py  quality.py  sampler.py  streaming.py
tests/: test_budget.py  test_calculator.py  test_cli.py  test_config.py  test_curriculum.py  test_diversity.py  test_edge_cases.py  test_mixer.py  test_optimizer.py  test_profile.py  test_quality.py  test_sampler.py  test_streaming.py  test_types.py
